fixed option menu not showing properly on mobile

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -513,25 +513,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.sticky {
-  position: sticky;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mb-24 {
-  margin-bottom: 6rem;
 }
 
 .mb-4 {
@@ -554,46 +538,16 @@ video {
   height: 100vh;
 }
 
+.h-\[75\%\] {
+  height: 75%;
+}
+
 .h-full {
   height: 100%;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
-.h-28 {
-  height: 7rem;
-}
-
-.h-auto {
-  height: auto;
-}
-
 .h-40 {
   height: 10rem;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
-}
-
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-\[75\%\] {
-  height: 75%;
 }
 
 .w-screen {
@@ -613,20 +567,8 @@ video {
   width: fit-content;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -647,10 +589,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-3 {
-  gap: 0.75rem;
 }
 
 .gap-2 {
@@ -785,32 +723,24 @@ input:checked + .slider:before {
 }
 
 @media (min-width: 820px) {
-  .md\:static {
-    position: static;
-  }
-
   .md\:grid {
     display: grid;
-  }
-
-  .md\:h-\[75\%\] {
-    height: 75%;
   }
 
   .md\:h-full {
     height: 100%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .md\:h-\[75\%\] {
+    height: 75%;
   }
 
   .md\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:grid-rows-2 {
